<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".fragments.QuizFragment">

    <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayoutQuizFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarQuizFragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:title="@string/quiz_toolbar_text" />

</com.google.android.material.appbar.AppBarLayout>

<ScrollView
android:id="@+id/scroll"
android:layout_height="0dp"
android:layout_marginTop="5dp"
android:layout_width="0dp"
app:layout_constraintBottom_toTopOf="@id/previous_button"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/appBarLayoutQuizFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start_guideline"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end_guideline"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_top_guideline"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_bottom_guideline"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />


    <TextView
        android:id="@+id/question"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
        app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
        app:layout_constraintTop_toTopOf="@id/margin_top_guideline"
        tools:text="Question ?" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
        app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/question">

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

<Button
android:clickable="false"
android:focusable="true"
android:id="@+id/previous_button"
android:layout_height="wrap_content"
android:layout_margin="16dp"
android:layout_width="120dp"
android:text="@string/button_previous_text"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent" />

<Button
android:clickable="false"
android:enabled="false"
android:focusable="true"
android:id="@+id/next_button"
android:layout_height="wrap_content"
android:layout_margin="16dp"
android:layout_width="120dp"
android:text="@string/button_next_text"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>